# TwentyFourPoint

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  resources.qrc
.github/workflows/: code-check.yml
i18n/: qml_zh_CN.ts
include/: algorithm_utils.h  game_ui_controller.h  menu_ui_controller.h  random_nickname.h  rank_list_model.h  rank_list_storage.h  simple_lexer.h  view_rule_ui_controller.h  view_ui_controller.h
iwyu/: main.imp  qt6_6.imp
qml/: app.qml  game.qml  menu.qml  rank_list.qml  start_game.qml  view_rule.qml
resources/: rule.txt
src/: algorithm_utils.cpp  game_ui_controller.cpp  main.cpp  menu_ui_controller.cpp  random_nickname.cpp  rank_list_model.cpp  rank_list_storage.cpp  simple_lexer.cpp  view_rule_ui_controller.cpp  view_ui_controller.cpp
